# Kaizen-Skin-Editor

./: .dockerignore  .env.development  .env.example  .env.production  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: MobileBlocker.tsx
src/components/auth/: OAuthCallback.tsx  UserMenu.tsx
src/components/badges/: BadgeDisplay.tsx  BadgesModal.tsx  NewBadgeModal.tsx
src/components/dialogs/: EditSkinDialog.tsx  ExportDialog.tsx  GalleryDialog.tsx  ImportDialog.tsx  LocalLibraryTab.tsx  OnboardingDialog.tsx  UploadDialog.tsx
src/components/editor/: BodyPartsPanel.tsx  Canvas2DView.tsx  ColorPicker.tsx  LeftSidebar.tsx  MenuBar.tsx  RightSidebar.tsx  SkinEditor.tsx  SkinInfoPanel.tsx  Viewer3D.tsx
src/components/layers/: LayerPanel.tsx
src/components/tools/: BrushSettings.tsx  ColorPicker.tsx  Toolbar.tsx
src/components/ui/: button.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  separator.tsx  sheet.tsx  slider.tsx  toggle.tsx  tooltip.tsx
src/config/: oauth.ts
src/hooks/: index.ts  useAutoSave.ts  useKeyboardShortcuts.ts  useToolHandler.ts
src/lib/: index.ts  toast.ts
src/lib/core/: SynchronizationManager.ts  index.ts
src/lib/history/: Command.ts  HistoryManager.ts  index.ts
src/pages/: PrivacyPolicy.tsx  TermsOfService.tsx
src/stores/: authStore.ts  editorStore.ts  localLibraryStore.ts  themeStore.ts
(+30 files in other folders)
